[package]
name = "pq-bincode"
version = "1.0.0-alpha.2"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A wrapper crate of queue-file for bincode serializable structs."
repository = "https://github.com/Ujang360/pq-bincode"
homepage = "https://crates.io/crates/pq-bincode"
keywords = ["persistent", "queue", "bincode", "queuefile"]
categories = ["database", "filesystem", "data-structures"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[dependencies]
bincode = "1.3.1"
queue-file = "1.1.0"
serde = { version = "1.0.115", features = ["derive"] }

[dev-dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
